# FGVC-DINO-v3

./: .gitignore  README.md  cropper.ipynb  hyperparams.yaml  main.py  main_for_presentation.py  pyproject.toml  temp.ipynb  visualize_pca.py  yolo_data.yaml
detection_stage/: detection.py
linear_head/: README.md  get_data_loaders.py  main.py  run_optuna.py  test.py  train.py  train_test_elements.py  train_test_pipeline.py  train_val_pipeline.py  validate.py
linear_head/test_utils/: attn_heatemap_utils.py  metrics_utils.py  scorecard_utils.py  test_metrics_utils.py  test_metrics_utils_for_samples.py
linear_head/train_utils/: run_optuna.py
linear_head_focal_loss/: focal_loss.py  main.py  test.py  train_test_elements.py
linear_head_focal_loss/train_utils/: run_optuna.py  train_metrics_utils.py
linear_head_focal_loss_supercon/: losses.py  main.py  test.py  train_test_elements.py  validate.py
linear_head_focal_loss_supercon/test_utils/: test_metrics_utils.py
linear_head_focal_loss_supercon/train_utils/: run_optuna.py  train_metrics_utils.py
linear_head_no_lora/: main.py  test.py  train_test_elements.py  validate.py
linear_head_no_lora/test_utils/: test_metrics_utils.py  test_metrics_utils_for_samples.py
linear_head_no_lora/train_utils/: run_optuna.py  train_metrics_utils.py
models/yolo11/: detection_note.ipynb
notebooks/: a0_load_dataset.ipynb
preprocess_pipeline/: README.md  cluster.py  cluster_2nd.py  cropper.py  sampler.py  sampler_2nd.py  splitter.py
preprocess_pipeline/select_dominance_label/: main.py
results/dinov3_vitl16/: hyperparams.yaml  (+7 more)
(+173 files in other folders)
